# Oop-5

./: .gitignore  CMakeLists.txt  main.cpp
include/: List.h  MemoryResource.h
src/: MemoryResource.cpp
tests/: tests.cpp
